--- a/2-Pandas/Practica/0-Occupation/Occupation copy.ipynb
+++ b/2-Pandas/Practica/0-Occupation/Occupation copy.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "#."
    ]
   },
   {
