--- a/2-Pandas/Practica/0-Occupation/Occupation copy.ipynb
+++ b/2-Pandas/Practica/0-Occupation/Occupation copy.ipynb
@@ -22,8 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "#."
+    "import pandas as pd\n"
    ]
   },
   {
